crates/ploke-tui/tests/integration/snapshots/integration__ui_model_browser_snapshot__model_browser_enter_expand_loading.snap
---
source: crates/ploke-tui/tests/integration/ui_model_browser_snapshot.rs
expression: text
---
> openai/gpt-4o — OpenAI: GPT-4o [via OpenRouter]
    source: OpenRouter catalog
    context_length: 128000
    supports_tools: true
    pricing: in=$5.000 out=$15.000
    providers:
      (loading…)
